# Sidecar

./: .env.example  .gitignore  FRONTEND_COMPLETION_SUMMARY.md  README.md  SIDECAR_REBRAND_SUMMARY.md  knexfile.js  package-lock.json  package.json  server.js  token_util.py  uuidgen.js
api/: auth.js  index.js  insights.js  integrations.js  metrics.js  orchestrate.js  servers.js  tdc.js
architecture/: SIDECAR_BUILD_PROMPT.md  SIDECAR_CODE_TEMPLATES.md
client/: README.md  package-lock.json  package.json  tailwind.config.js
client/public/: index.html
client/src/: App copy.js  App.css  (+1 more)
config/: default.json  production.json  staging.json
controller/: authController.js  insightsController.js  integrationsController.js  metricsController.js  orchestrateController.js  serversController.js  tdcController.js
migrations/: 20260313000000_users.js  20260313000001_user_integrations.js  20260323000000_tdc_tables.js  20260323000001_add_admin_to_users.js  20260525000000_users.js  20260525000001_a2a_servers.js  20260525000002_tasks.js  20260525000003_metrics.js  20260525000004_logs.js  20260525000005_orchestrate_commands.js
model/: integration.js  metric.js  server.js  task.js  user.js
servers/: main.py  pyproject.toml
servers/Copilot Mock Data A2A Server/: a2a_pusher.py  a2a_server.py  orchestrate-agent.yaml
servers/Copilot Mock Data Generation A2A Server/: a2a_agent_executor.py  a2a_copilot.py  orchestrate-agent.yaml
services/: configGenerator.js  logTailer.js  orchestrateClient.js  serverManager.js  websocket.js
templates/: a2a_server.py
utilities/: crypto.js
(+61 files in other folders)
