[project]
name = "servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-cli>=0.2",
    "a2a-sdk>=1.0.1",
    "colorama>=0.4.6",
    "microsoft-agents-hosting-aiohttp>=0.9.0",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.4",
    "starlette>=1.0.0",
    "uvicorn>=0.45.0",
    "websockets>=16.0",
]
